	Deprecated ChartGenerator.set[Range|Domain}AxisRange(...) in favor of X/Y versions.
	X and Y axis labels changed in ScatterPlotChartGenerator to more rational labels.
	JFreeChart.generatePDF rolled into PDFEncoder. 
	Made ChartGenerator.rebuildAttributeIndices() private
	ScatterPlotGenerator.updateSeries(...) has its arguments trimmed
	SeriesAttributes.manipulators made private
	SeriesAttributes.seriesIndex, stoppable, and generator now private
	Certain SeriesAttributes protected methods now public
	SeriesAttributes.iconFor(...) made private
	SeriesAttributes.setManipulatorsVisible(...) deleted
	SeriesAttributes.buildManipulators() made private
	Made TimeSeriesAttributes.series private
	TimeSeriesAttributes.[get|set][Thickness|Stretch]() now uses doubles, not floats
	TimeSeriesAttributes.getDashPattern() now properly returns an int, not a float
	ScatterPlotSeriesAttributes no longer has 'fill' methods and objects.
	ScatterPlotSeriesAttributes and HistogramSeriesAttributes.[get|set]Values() 
		made package-level private
	HistogramSeriesAttributes.[get|set]LineOpacity() renamed to [get|set]StrokeOpacity()
	HistogramSeriesAttributes.[get|set]Thickness() now uses doubles
	TimeSeriesChartingPropertyInspector.addToMainSeries(...) made private
	Moved data culling tasks from TimeSeriesChartingPropertyInspector to 
		TimeSeriesAttributes
	Removed two methods from DataCuller
	Methods in DataCuller made public
	Various MinGapDataCuller methods made private
	Reindented
	SimpleInspector revised.  MAX_PROPERTIES deleted and replaced with
		a private maximum properties variable and DEFAULT_MAX_PROPERTIES.
		The constructors were revamped, and new ones added.  Children
		SimpleInspectors now use the same max properties as their parents.
	GUIState.getMaximumPropertiesForInspector() added
	Updated wcss tutorial organization
	Deleted mason.1.3.1.command

Version 17
	Minor tweaks to Ant.java.  Thanks to Amit Goel <subs@agoel.com>
